Fix width on mobile

--- a/src/pages/Home.scss
+++ b/src/pages/Home.scss
@@ -1,6 +1,6 @@
 .home-page {
   height: 100vh;
-  width: 100vw;
+  width: 100%;
   overflow-y: auto;
 
   .game-background {
@@ -309,11 +309,17 @@ p {
 
   .home-content {
     flex-direction: column;
+    align-items: stretch;
   }
 
   .right-sidebar {
     min-width: 0;
     max-width: none;
+    width: 100%;
+  }
+
+  .main-content {
+    width: 100%;
   }
 
   .table-container {
